--- a/style.css
+++ b/style.css
@@ -68,4 +68,21 @@ h1 {
     width: 70%;
 
 }
-}
+}  
+ 
+  
+
+table, th, td {
+    border: 1px solid black;
+    background-color: aquamarine;
+
+
+  }
+  
+  .message{
+    background-color: blanchedalmond;
+  }
+  .h2{
+    background-color: blueviolet;
+  }
+
