--- a/style.css
+++ b/style.css
@@ -73,16 +73,21 @@ h1 {
   
 
 table, th, td {
+
     border: 1px solid black;
     background-color: aquamarine;
+    word-spacing: normal;
+    border-spacing: 5px;
+     width: 60%;
 
 
   }
   
   .message{
     background-color: blanchedalmond;
+    padding: 1em;
+    border-radius: 1em;
+
   }
-  .h2{
-    background-color: blueviolet;
-  }
+  
 
